data/stackoverflow-snippets/scala/148
scala> def foo(b: => Boolean): Unit = {}
foo: (b: => Boolean)Unit

scala> val f: Boolean => Unit = foo _
<console>:12: error: type mismatch;
 found   : (=> Boolean) => Unit
 required: Boolean => Unit
       val f: Boolean => Unit = foo _
                                ^

scala> val f: (() => Boolean) => Unit = foo _
<console>:12: error: type mismatch;
 found   : (=> Boolean) => Unit
 required: (() => Boolean) => Unit
       val f: (() => Boolean) => Unit = foo _
                                        ^
